# progressive-android-next

./: .gitignore  settings.gradle.kts
Screenshots/: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  glyph_data.hpp  main.cpp
app/src/main/java/chat/progressive/app/next/: MainActivity.java
app/src/main/java/com/nous/sdfontlogin/: MainActivity.java
