cmake_minimum_required(VERSION 3.22.1)
project("progressivenext")
set(CMAKE_CXX_STANDARD 17)
find_library(log-lib log)
find_library(glesv3-lib GLESv3)
find_library(android-lib android)
add_library(progressivenext SHARED main.cpp)
target_include_directories(progressivenext PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(progressivenext ${glesv3-lib} ${log-lib} ${android-lib})
